--- a/classroomweb/WebContent/WEB-INF/web.xml
+++ b/classroomweb/WebContent/WEB-INF/web.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>classroomweb</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+  
+  <servlet>
+    <servlet-name>roomServlet</servlet-name>
+    <servlet-class>com.room.data.service.roomServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>roomServlet</servlet-name>
+    <url-pattern>/behind/classroom/roomServlet</url-pattern>
+  </servlet-mapping>
+  
+  
 </web-app>
