--- a/trunk/classroomweb/.settings/org.eclipse.core.resources.prefs
+++ b/trunk/classroomweb/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/front/about.jsp=UTF-8
+encoding//WebContent/front/contact.jsp=UTF-8
+encoding//WebContent/front/searchroom.jsp=UTF-8
 encoding/<project>=UTF-8
