--- a/trunk/classroomweb/WebContent/WEB-INF/web.xml
+++ b/trunk/classroomweb/WebContent/WEB-INF/web.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>classroomweb</display-name>
-  
   <servlet>
     <servlet-name>roomServlet</servlet-name>
     <servlet-class>com.room.data.service.roomServlet</servlet-class>
@@ -10,16 +9,22 @@
     <servlet-name>userServlet</servlet-name>
     <servlet-class>com.room.data.service.UserServlet</servlet-class>
   </servlet>
-  
   <servlet-mapping>
     <servlet-name>roomServlet</servlet-name>
-    <!-- <url-pattern>/behind/classroom/roomServlet</url-pattern> -->
     <url-pattern>/roomServlet</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>userServlet</servlet-name>
     <url-pattern>/userServlet</url-pattern>
   </servlet-mapping>
-  
-  
+  <servlet>
+    <description></description>
+    <display-name>annouceServlet</display-name>
+    <servlet-name>annouceServlet</servlet-name>
+    <servlet-class>com.room.data.service.annouceServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>annouceServlet</servlet-name>
+    <url-pattern>/annouceServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
