--- a/classroomweb/WebContent/WEB-INF/web.xml
+++ b/classroomweb/WebContent/WEB-INF/web.xml
@@ -19,12 +19,22 @@
   </servlet-mapping>
   <servlet>
     <description></description>
-    <display-name>annouceServlet</display-name>
-    <servlet-name>annouceServlet</servlet-name>
-    <servlet-class>com.room.data.service.annouceServlet</servlet-class>
+    <display-name>InitServlet</display-name>
+    <servlet-name>InitServlet</servlet-name>
+    <servlet-class>com.room.data.service.InitServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>annouceServlet</servlet-name>
-    <url-pattern>/annouceServlet</url-pattern>
+    <servlet-name>InitServlet</servlet-name>
+    <url-pattern>/InitServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>front_roomServlet</display-name>
+    <servlet-name>front_roomServlet</servlet-name>
+    <servlet-class>com.room.data.service.front_roomServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>front_roomServlet</servlet-name>
+    <url-pattern>/front_roomServlet</url-pattern>
   </servlet-mapping>
 </web-app>
