--- a/trunk/classroomweb/WebContent/WEB-INF/web.xml
+++ b/trunk/classroomweb/WebContent/WEB-INF/web.xml
@@ -38,11 +38,11 @@
     <url-pattern>/front_roomServlet</url-pattern>
   </servlet-mapping>
   <servlet>
-    <servlet-name>luntan</servlet-name>
+    <servlet-name>lunTan</servlet-name>
     <servlet-class>com.room.data.service.luntanServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>luntan</servlet-name>
+    <servlet-name>lunTan</servlet-name>
     <url-pattern>/luntanServlet</url-pattern>
   </servlet-mapping>
 </web-app>
